--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.mulesoft.training</groupId>
- <artifactId>maven-project</artifactId>
+ <artifactId>maven-project-vladputin</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>mule</packaging>
  <name>Mule maven-project Application</name>
@@ -13,7 +13,8 @@
  <properties>
   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
+  <UID>andrew-haman</UID>
+  <Password>asdf</Password>
   <mule.version>3.8.3</mule.version>
   <mule.tools.version>1.2</mule.tools.version>
   <derby.version>10.13.1.1</derby.version>
@@ -22,6 +23,29 @@
 
  <build>
   <plugins>
+  <plugin>
+    <groupId>org.mule.tools.maven</groupId>
+    <artifactId>mule-maven-plugin</artifactId>
+    <version>2.0</version>
+    <configuration>
+        <deploymentType>cloudhub</deploymentType>
+        <muleVersion>${mule.version}</muleVersion> 
+        <username>${UID}</username>
+        <password>${Password}</password>
+     <workerType>Micro</workerType>
+        <redeploy>true</redeploy>
+        <environment>Production</environment>
+    </configuration>
+    <executions>
+        <execution>
+            <id>deploy</id>
+            <phase>deploy</phase>
+            <goals>
+                <goal>deploy</goal>
+            </goals>
+        </execution>
+    </executions>
+</plugin>
    <plugin>
     <groupId>org.mule.tools.maven</groupId>
     <artifactId>mule-app-maven-plugin</artifactId>
